Fix layout bug

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -24,7 +24,7 @@ $brand-complement: {{ site.data.attributes.colours.complement }};
 
 body,
 .front-page-container {
-  height: 100%;
+  height: 80%;
 }
 
 body {
